# emotion-llm-lab

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  dpo_qwen3_8b_smoke.yaml  dpo_qwen3_8b_v1.yaml  sft_qwen3_8b_smoke.yaml  sft_qwen3_8b_v1.yaml
configs/eval/: rubric_v1.yaml
data/: README.md  dataset_info.json
data/dpo/: emotion_dpo_tiny.json  emotion_dpo_tiny_zh.json
data/eval/: README.md  probe.schema.json  probes_v1.jsonl
data/sft/: emotion_sft_tiny.json  emotion_sft_tiny_zh.json
docs/: collaboration.md
docs/adr/: 0000-adr-template.md  0001-base-model-qwen3-8b.md  0002-fine-tune-framework-llama-factory.md  0003-training-hardware-ec2-g5-dlami.md  0004-remote-access-ssm-session-manager.md  0005-python-311-uv-dependency-groups.md  0006-alignment-method-sft-dpo-with-kto-optional.md  0007-bootstrap-via-ssm-document.md  0008-train-venv-self-contained-torch.md  0009-unsloth-pins-torch-version.md  0010-secrets-never-baked-into-scripts.md  0011-eval-pipeline-llm-as-judge-plus-drift-probes.md  README.md
docs/learning/: CHANGELOG.md  README.md
docs/runbooks/: first-deploy.md
infrastructure/: README.md
infrastructure/cloudformation/: training-env.yaml
infrastructure/scripts/: bootstrap.sh  deploy.sh  destroy.sh  preflight.sh  set-secrets.sh  ssm-shell.sh  tunnel.sh
personas/: _template.md  lily_warm_companion_en.md  lily_warm_companion_zh.md
schemas/: README.md  dpo_alpaca.schema.json  sft_alpaca.schema.json
scripts/: check_no_set_x_with_secrets.py  eval_persona.py  run-dpo-smoke.sh  run-smoke.sh
scripts/eval/: README.md  __init__.py  calibrate.py  candidates.py  judges.py  probes.py  report.py  rubric.py
scripts/eval/tests/: __init__.py  conftest.py  test_calibrate.py  test_judges.py  test_probes.py  test_report.py  test_rubric.py
